--- a/packages/ioc/package.json
+++ b/packages/ioc/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@apoyo/scopes",
-  "version": "0.4.0",
+  "name": "@apoyo/ioc",
+  "version": "0.5.0",
   "description": "Functional dependency injection",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
